2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Added handlers for Save and SaveAs
	  actions.
	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic, Monodoc.Editor/SaveDocDialog.cs:
	  Added two new actions: Save and Save As. Added a new dialog for
	  Save As action.
	* Monodoc.Editor/OpenDocDialog.cs: Whitespace changes.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/OpenDocDialog.cs: Minor change.
	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: More changes to
	  Serialize method.

2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor.Gui/DocumentTagTable.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic: Changed to Property Editable to
	  false in DocumentEditor, maybe add it directly to constructor.

2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added initial
	  implementation of the serialize methods and added 3 more helper
	  methods to deserialize attributes.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Deleted extra Editable
	  properties that are not needed.

2007-06-18  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/MonoDocument.cs: Deleted Convert methods this
	  new is done in Deserializer.
	* Monodoc.Editor.Utils/EcmaReader.cs: Deleted Accesor.
	* Monodoc.Editor/EditorWindow.cs: Now using MonoDocument and
	  DocumentBufferArchiver when opening a file.

2007-06-18  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/Test/TestMonoDocument.cs: Added to basic
	  constructor tests for MonoDocument.
	* Monodoc.Editor.Utils/MonoDocument.cs: Minor change.
	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Deleting unused
	  variables.